See #30 Support more decorations

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -302,7 +302,6 @@
     "err": "Fehler",
     "Error from Dropbox with failed retries": "Fehler mit Dropbox (trotz wiederholter Versuche)",
     "Errors occurred": "Es sind Fehler aufgetreten",
-    "validationerrors": "Konfigurationsfehler",
     "explicit_sort": "**--explicit_sort",
     "Extract 0": "Auszug 0",
     "Extract 1": "Auszug 1",
@@ -323,6 +322,7 @@
     "fill": "ausfüllen",
     "fit to viewport": "in Anzeigebereich\neinpassen",
     "fit": "eingepasst",
+    "fix invalid configuration parameters": "fehlerhafte Konfigurationsparameter korrigieren",
     "flowconf": "Flusslinien bearbeiten",
     "Flowline": "Flußlinie",
     "flowline": "Flußlinie",
@@ -357,8 +357,11 @@
     "insert a title for the \ncurrent extract": "Titel für den aktuellen\n Auszug einfügen",
     "Insert addon at cursor position": "Zusatzinformation an der Cursor-Position einfügen",
     "Insert Addon": "Zusatz einfügen",
+    "Insert decoration at cursor position": "fügt eine Dekoration an der aktuellen Position ein",
+    "Insert Decoration": "Dekoration einfügen",
     "instrument specific": "Intrumentspezifika",
     "instrument": "Instrument",
+    "instrument_shape": "Instr. Rahmen",
     "Interact with dropbox": "Arbeiten mit Dropbox",
     "interact with local files": "Arbeit mit lokalen Dateien",
     "italic": "kursiv",
@@ -629,6 +632,7 @@
     "unsupported section found in abc file: ": "Zupfnoter-Abschnitt in ABC-File nicht unterstützt: ",
     "url": "URL",
     "validate": "Validierung",
+    "validationerrors": "Konfigurationsfehler",
     "value": "Wert",
     "Value": "Wert",
     "variantend": "Variantes Ende",
@@ -662,8 +666,6 @@
     "Zombie token or zombie login occured. Maybe you hit the back button in the browser.": "Zombie Zugriffstoken oder login aufgetreten. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
     "Zupfnoter": "Zupfnoter",
-    "fix invalid configuration parameters": "fehlerhafte Konfigurationsparameter korrigieren",
-    "instrument_shape": "Instr. Rahmen",
     "_ende_der_liste": "",
     "+: lyric without music": "+: Liedtext ohne Musik",
     "+: symbol line without music": "+: Symbolzeile ohne Musik",
