adapted abc2svg: 1.20.8- Git: v1.20.8-20-g5c4a69a

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -293,6 +293,7 @@
     "edittemplate": "Vorlage bearbeiten",
     "Effective value": "wirksamer Wert",
     "ELLIPSE_SIZE": "Notengröße",
+    "Empty voice in %%score": "%%score zeigt auf eine leere Stimme",
     "Empty voice": "Stimme ist leer",
     "end-of-translagion": "end-of-translation",
     "enter a page bound annotation": "Seitengebundene Beschriftung\nanlegen/bearbeiten",
@@ -641,6 +642,7 @@
     "vertical position (top->down)": "vertikale position (von oben nach unten)",
     "Videos": "Videos",
     "vl": "'V' links",
+    "Voice not in %%score": "Stimme nicht in %%score eingetragen",
     "voices": "Stimmen",
     "vpos": "vert. Position",
     "vr": "'V' rechts",
