--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -186,6 +186,7 @@
     "edittemplate": "Vorlage bearbeiten",
     "Effective value": "wirksamer Wert",
     "ELLIPSE_SIZE": "Notengröße",
+    "Empty voice in %%score": "%%score zeigt auf eine leere Stimme",
     "Empty voice": "Stimme ist leer",
     "end-of-translagion": "end-of-translation",
     "enter a page bound annotation": "Seitengebundene Beschriftung\nanlegen/bearbeiten",
@@ -536,6 +537,7 @@
     "vertical position (top->down)": "vertikale position (von oben nach unten)",
     "Videos": "Videos",
     "vl": "'V' links",
+    "Voice not in %%score": "Stimme nicht in %%score eingetragen",
     "voices": "Stimmen",
     "vpos": "vert. Position",
     "vr": "'V' rechts",
