--- a/30_sources/SRC_Zupfnoter/src/localization/abc2svg_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/abc2svg_de-de.json
@@ -74,6 +74,7 @@
     "Cannot read file '$1'": "File '$1' kann nicht gelesen werden",
     "Decoration ignored": "Dekoration ignoriert",
     "Empty line in tune header - ignored": "Leerzeile in Kopfbereich - ignoriert",
+	"End of slur without start": "End of slur without start",
 	"Erroneous end of voice overlay":
 			"Fehlerhaftes Ende einer Stimme in Stimm-Überlagerung",
 	"Error loading the module $1": "Error loading the module $1",
