--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -1,5 +1,7 @@
 {
   "phrases": {
+
+
     "": "",
     "$resources": "$ Resourcen",
     "-": "-",
@@ -18,7 +20,11 @@
     "4": "4",
     "5": "5",
     "6": "6",
+    "<(": "**--<(",
+    "<)": "**--<)",
     "<div style=": "<div style=",
+    ">(": "**-->(",
+    ">)": "**-->)",
     ">_": ">_",
     "A3": "A3",
     "A3-A4": "A3-A4",
@@ -49,6 +55,7 @@
     "afterColonN": "afterColonN",
     "afterComma": "afterComma",
     "Akkordzither": "Akkordzither",
+    "alfine": "Al Fine",
     "align": "Ausrichtung",
     "aligned": "aligned",
     "all parameters": "Alle Parameter",
@@ -65,6 +72,7 @@
     "apanchor": "autom. pos. Anker",
     "apbase": "autom. pos. Basis",
     "apply settings from template": "Konfiguration aus  Vorlage anwenden",
+    "arpeggio": "Arpeggio",
     "Auto Refresh": "Auto-Rendern ",
     "Auto Render off": "Auto-Rendern off",
     "Auto Render on ": "Auto-Rendern on",
@@ -88,8 +96,10 @@
     "beforeColonN": "beforeColonN",
     "bold": "fettdruck",
     "bottomup": "Spiel aufwärts",
+    "Breath - interrupt Flowline": "'Atmen' - unterbricht die Flusslinie'",
     "BUG: error while initializing Zupfnoter Controller": "BUG: Fehler beim initialisieren. Bitte informiere Zupfpnoter-Entwicklung",
     "BUG: worker did not finsh": "Fehler: Hintergrundberechnung nicht richtig beendet",
+    "C": "C",
     "c_jumplines": "Sprunglinien",
     "CAUTION: your abc-code is vulnerable !!! removed beginjs / endjs": "ACHTUNG:: dein ABC-Code enthält ggf. Schadcode. beginjs / endjs entfernt",
     "choose drobox path": "Speicherort auswählen",
@@ -98,18 +108,21 @@
     "chords": "Akkordsymbole",
     "cntextleft": "Text rechte Zählmarke",
     "cntextright": "Text linke Zählmarke",
+    "coda": "Coda",
     "color": "Farbeinstellung",
     "color_default": "Sonstiges",
     "color_off": "Var. End sw",
     "color_on": "Var. End farbig",
     "color_variant1": "Variante1",
     "color_variant2": "Variante2",
+    "comes as": "erscheint als",
     "compact": "kompakt",
     "configtemplate": "Vorlage konfigurieren",
     "Configuration": "Konfiguration",
     "configure positioning of rests\ncompatible to version 1.3": "Pausen kompatibel zu version 1.3}",
     "configure your sheet": "Blatt konfigureren",
     "console": "Konsole",
+    "could not find annotation": "Kann Anmerkung nicht finden",
     "could not find extract with number": "Es gibt keinen Auszug mit nummer",
     "could not open file": "konnte Datei nicht öffnen",
     "countnote left": "Zählmarke links",
@@ -122,7 +135,10 @@
     "Create new sheet": "Neues Blatt erstellen",
     "Create new Sheet": "Neues Musikstück erstellen",
     "create": "erzeugen",
+    "crescendo(": "Start Cresecendo",
+    "crescendo)": "Ende Crescendo",
     "current extract": "aktueller Auszug",
+    "D": "D",
     "d1": "**--d1",
     "d12": "**--d12",
     "d16": "**--d16",
@@ -135,12 +151,18 @@
     "d6": "**--d6",
     "d64": "**--d64",
     "d8": "**--d8",
+    "dacapo": "Da Capo",
+    "dacoda": "Da Coda",
+    "dasegno": "Da Segno",
     "decimals": "Dezimalstellen",
+    "DECORATIIONS_AS_ANNOTATIONS": "**--DECORATIIONS_AS_ANNOTATIONS",
     "decoration": "Dekoration",
     "decrease Minc": "kleinerer Vorschub",
     "default": "Vorgabewert",
     "defaults": "Vorgabewerte",
     "Demo": "Demonstration",
+    "diminuendo(": "Start Diminuendo",
+    "diminuendo)": "Ende Diminuendo",
     "direction to shift the note": "Richtung, in welche die Note geschoben werden soll",
     "direction": "Richtung",
     "Display pdfs": "Pdf anzeigen",
@@ -208,12 +230,17 @@
     "Extract-Annotation": "Auszugsbeschriftung",
     "extracts": "Auszüge",
     "Extras": "Extras",
+    "f": "Forte f",
+    "ff": "Forte ff",
+    "fff": "Forte fff",
+    "ffff": "Forte ffff",
     "File": "Datei",
     "filebase": "Filename-Basis",
     "Filename not specified in song add an F: instruction": "Kein Filename angegeben. Bitte füge eine F: - Kopfzeile hinzu",
     "filenamepart": "Filename-Zusatz",
     "Files saved to dropbox": "Dateien in Dropbox gespeichert",
     "fill": "ausfüllen",
+    "fine": "Fine",
     "fit to viewport": "in Anzeigebereich\neinpassen",
     "fit": "eingepasst",
     "fix invalid configuration parameters": "fehlerhafte Konfigurationsparameter korrigieren",
@@ -241,6 +268,7 @@
     "horizontal position": "horizontale Position (von links nach rechts)",
     "hpos": "horiz. Position",
     "Id": "Identifikationsnummer",
+    "illegal character in [r:] (must be of [a-z][a-z0.9_])": "fehlerhaftes Zeihen in [r:] (Muster [a-z][a-z0.9_])",
     "imagename": "Bildname",
     "images": "Bilder",
     "import abc, xml from local system": "abc oder xml Datei importieren",
@@ -251,13 +279,17 @@
     "insert a title for the \ncurrent extract": "Titel für den aktuellen\n Auszug einfügen",
     "Insert addon at cursor position": "Zusatzinformation an der Cursor-Position einfügen",
     "Insert Addon": "Zusatz einfügen",
+    "insert Damper below note": "Abdämpfer",
     "Insert decoration at cursor position": "fügt eine Dekoration an der aktuellen Position ein",
     "Insert Decoration": "Dekoration einfügen",
+    "insert decoration: ": "Dekoration einfühgen: ",
+    "insert Ritardando": "Ritardando einfügen",
     "instrument specific": "Intrumentspezifika",
     "instrument": "Instrument",
     "instrument_shape": "Instr. Rahmen",
     "Interact with dropbox": "Arbeiten mit Dropbox",
     "interact with local files": "Arbeit mit lokalen Dateien",
+    "interrupts flowline after the note": "unerbricht die Flußlinie nach der Note",
     "italic": "kursiv",
     "jumpline_anchor": "Sprungl.Anker",
     "jumpline_anchor_close": "Sprungl.Anker nah",
@@ -348,6 +380,7 @@
     "Open a new Zupfnoter window\nwith the reference page": "Öffne ein neues\nZupfnoter-Fenster mit\neiner Erklärung\nder Zupfnoter-Ausgabe",
     "Open ABC file in dropbox": "ABC-File in Dropbox öffnen",
     "Open an concise ABC tutorial (in German)": "Ausführliches Tutorial von Schacherl öffnen (Deutsch)",
+    "Open Support page": "Support-Seite öffnen",
     "Open the ABC-Standard (english)": "ABC Standard öffnen (englisch)",
     "Open the user manual": "Öffne das Zupfnoter Benutzerhandbuch",
     "Open the version information on website": "Vesionsinformationen anzeigen",
@@ -355,6 +388,7 @@
     "Open Zupfnoter website": "Öffne die Zupfnoter - Homepage",
     "Open": "Öffnen",
     "out distance": "Abstand der Ausgangslinie",
+    "p": "Piano p",
     "pack_max_spreadfactor": "max. Spreizung",
     "pack_method": "Packmethode",
     "pack_min_increment": "min. Inkrement",
@@ -377,8 +411,12 @@
     "Please provide also value for out-line": "Bitte gib auch einen wert für die Ausgangslinie",
     "Please provide also X": "Bitte gib auch einen X-Wert zum Y-Wert an",
     "Please provide also Y": "Bitte gib auch einen Y-Wert zum X-Wert an",
+    "please specify a key note": "**--please specify a key note",
     "pop from extract 0": "aus Auszug 0 holen",
     "pos": "Position",
+    "pp": "Piano pp",
+    "ppp": "Piano ppp",
+    "pppp": "Piano pppp",
     "prefix": "Präfix",
     "presets": "Vorlagen",
     "Print A3 Harpnotes": "Harfennoten A3 drucken",
@@ -428,11 +466,14 @@
     "Revert notes": "Mehrklänge umkehren",
     "revert unisons": "Reihenfolge der Noten in Mehrklängen umkehren",
     "right": "rechts",
+    "rit": "rit",
+    "S": "S",
     "saitenspiel": "Saitenspiel",
     "Save ABC file in dropbox": "ABC-File in Dropbox speichern",
     "Save": "Speichern",
     "saveformat": "Seitenformat für pdf",
     "search": "Suche",
+    "segno": "Segno",
     "Select in all voices": "Abschnitt in allen Stimmen auswählen",
     "select the current notes in all voices": "selektierten Zeitraum in allen Stimmen selektieren",
     "Selection is empty": "Selektion ist leer. Du muss einen Bereich auswählen!",
@@ -489,9 +530,11 @@
     "stringnames.full": "Saitennamen.detail",
     "style": "Stil",
     "subflowlines": "Hilfsmelodielinien",
+    "Support": "Support",
     "Swap first and last note of all unisons in the selection": "Tausche erste und letzte Note in Merkängen",
     "Swap fist and last note in unison": "Noten in Mehrklang tauschen",
     "synchlines": "Synchronisationslinien",
+    "Syntax-Error in Jump anotation": "Fehler in Sprungliniendefinition",
     "T01_number": "T01 Nummer",
     "T01_number_extract": "T01 Auszug-Nummer",
     "T01_number_extract_value": "T01 Auszugn Nummer Wert",
@@ -532,11 +575,13 @@
     "value": "Wert",
     "Value": "Wert",
     "variantend": "Variantes Ende",
+    "vb": "Dämpfer unter der Note",
     "verses": "Strophen",
     "Version info": "Versionsinformationen",
     "vertical position (top->down)": "vertikale position (von oben nach unten)",
     "Videos": "Videos",
     "vl": "'V' links",
+    "Voice has no notes or is not in %%score": "Stimme enthält keine Noten oder steht nicht in %%score - Anweisung",
     "Voice not in %%score": "Stimme nicht in %%score eingetragen",
     "voices": "Stimmen",
     "vpos": "vert. Position",
@@ -564,6 +609,8 @@
     "Zombie token or zombie login occured. Maybe you hit the back button in the browser.": "Zombie Zugriffstoken oder login aufgetreten. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
     "Zupfnoter": "Zupfnoter",
+
+
 
 
     "_ende_der_liste": ""
