--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -203,10 +203,10 @@
 \hyphenation{Zupf-noter}
 \hyphenation{Fen-ster}
 
-Version V\_1.14-61-g97fdd012
+Version V\_1.14-63-gc09e2d01
 
 \begin{verbatim}
-© 2020 https://www.zupfnoter.de
+© 2021 https://www.zupfnoter.de
 \end{verbatim}
 
 \clearpage
@@ -7173,14 +7173,14 @@ Das ist allerdings nur in der Textansicht m\"{o}glich.
         "value" : {
           "pos"   : [340, 251],
           "style" : "small",
-          "text"  : "© 2020\n"
+          "text"  : "© 2021\n"
         }
       },
       "T03_copyright_harpnotes"  : {
         "value" : {
           "pos"   : [340, 260],
           "style" : "small",
-          "text"  : "© 2020 Notenbild: zupfnoter.de"
+          "text"  : "© 2021 Notenbild: zupfnoter.de"
         }
       },
       "T04_to_order"             : {
@@ -7295,7 +7295,7 @@ das Copyright auf die Komposition angegeben.
 
 \begin{verbatim}
     "T02_copyright_music": {
-      "value" : {"pos": [340, 251], "style": "small", "text": "© 2020\n"}
+      "value" : {"pos": [340, 251], "style": "small", "text": "© 2021\n"}
     }
       
 \end{verbatim}
@@ -7314,7 +7314,7 @@ Tischharfe
       "value" : {
         "pos"   : [340, 260],
         "style" : "small",
-        "text"  : "© 2020 Notenbild: zupfnoter.de"
+        "text"  : "© 2021 Notenbild: zupfnoter.de"
       }
     }
       
@@ -8072,14 +8072,83 @@ erh\"{o}hen.
 \hypertarget{aux308nderungsgeschichte}{%
 \section{\"{A}nderungsgeschichte}\label{aux308nderungsgeschichte}}
 
-\hypertarget{v-1.14-februar-202}{%
-\subsection{V 1.14 Februar 202}\label{v-1.14-februar-202}}
+\hypertarget{v-1.15-mai-2021}{%
+\subsection{V 1.15 Mai 2021}\label{v-1.15-mai-2021}}
+
+\hypertarget{erweiterung}{%
+\subsubsection{Erweiterung}\label{erweiterung}}
+
+\begin{itemize}
+\tightlist
+\item
+  Men\"{u}anordnung umgstellt
+\item
+  Dekorationen \#30
+\item
+  experimnteller Harmonieassistent \#298
+\item
+  Help Menu hat nun einen Link auf die Support-Seit
+\item
+  upgrade to abc2svg - besseree Unters\"{u}tzung des ABC standards
+\item
+  Flu\ss lilninen k\"{o}nnen nun unterbrochen werden durch !breath!, and
+  bar types \texttt{\textbar{}\textbar{}} \texttt{\textbar{}{]}} \#301
+\item
+  Mehr details in Z\"{a}hlmarken bei punktierten Noten \#297
+\item
+  Fehlermeldungen verbessert
+\item
+  verbesserte Behnanldung von Duplikaten in Filename\_zusatz
+\item
+  verbesserte Behnaldung von tempo
+\item
+  verbesserte Erkennung fehlender Tonartmodi
+\end{itemize}
+
+\hypertarget{fix}{%
+\subsubsection{fix}\label{fix}}
+
+\begin{itemize}
+\tightlist
+\item
+  Behoben: Absturz wenn eine einzelne Note wiederholt wird
+\item
+  Behoben: Absturz bei klick auf elemente, die nicht in ABC vorkommen
+  (z.B. Debug-Grid)
+\item
+  Behoben: Absturz ``M:'' \#300
+\item
+  Behoben: Absturz Editor, wenn kein Harfennoten erzeugt werden konnten
+\item
+  Behoben: font color
+\end{itemize}
+
+\hypertarget{v-1.14-februar-2021}{%
+\subsection{V 1.14 Februar 2021}\label{v-1.14-februar-2021}}
+
+\hypertarget{fix-1}{%
+\subsubsection{fix}\label{fix-1}}
+
+\begin{itemize}
+\tightlist
+\item
+  refine alignment of stringnames \#281
+\item
+  Problem with bars within measures with repeat variant ending offbeat
+  \#284
+\item
+  filter mor unicdoce characters \#292
+\item
+  sharp chord symbols like F\# now work in transposed pieces \#295
+\item
+  now we can control the style of title \#294
+\end{itemize}
 
 \hypertarget{v-1.13-dezember-2019}{%
 \subsection{V 1.13 Dezember 2019}\label{v-1.13-dezember-2019}}
 
-\hypertarget{fix}{%
-\subsubsection{fix}\label{fix}}
+\hypertarget{fix-2}{%
+\subsubsection{fix}\label{fix-2}}
 
 \begin{itemize}
 \tightlist
@@ -8129,8 +8198,8 @@ erh\"{o}hen.
   Probleme mit Grafiken \#278
 \end{itemize}
 
-\hypertarget{erweiterung}{%
-\subsubsection{Erweiterung}\label{erweiterung}}
+\hypertarget{erweiterung-1}{%
+\subsubsection{Erweiterung}\label{erweiterung-1}}
 
 \begin{itemize}
 \tightlist
@@ -8165,8 +8234,8 @@ erh\"{o}hen.
 \hypertarget{v-1.11-18.4.2019}{%
 \subsection{V 1.11 18.4.2019}\label{v-1.11-18.4.2019}}
 
-\hypertarget{fix-1}{%
-\subsubsection{fix}\label{fix-1}}
+\hypertarget{fix-3}{%
+\subsubsection{fix}\label{fix-3}}
 
 \begin{itemize}
 \tightlist
@@ -8221,8 +8290,8 @@ erh\"{o}hen.
 \hypertarget{v.1.10-nov-2018}{%
 \subsection{V.1.10 Nov 2018}\label{v.1.10-nov-2018}}
 
-\hypertarget{fix-2}{%
-\subsubsection{fix}\label{fix-2}}
+\hypertarget{fix-4}{%
+\subsubsection{fix}\label{fix-4}}
 
 \begin{itemize}
 \tightlist
@@ -8533,8 +8602,8 @@ internal release
 \hypertarget{v-1.7.1}{%
 \subsection{v 1.7.1}\label{v-1.7.1}}
 
-\hypertarget{fix-3}{%
-\subsubsection{fix}\label{fix-3}}
+\hypertarget{fix-5}{%
+\subsubsection{fix}\label{fix-5}}
 
 \begin{itemize}
 \tightlist
@@ -8550,8 +8619,8 @@ internal release
 \hypertarget{v-1.7}{%
 \subsection{v 1.7}\label{v-1.7}}
 
-\hypertarget{fix-4}{%
-\subsubsection{fix}\label{fix-4}}
+\hypertarget{fix-6}{%
+\subsubsection{fix}\label{fix-6}}
 
 \begin{itemize}
 \tightlist
@@ -8729,8 +8798,8 @@ Dragging of jumpline does not work properly on Saitenspiel \#158
   Referenz erzeugt nun keine Fehlermehr
 \end{itemize}
 
-\hypertarget{erweiterung-1}{%
-\subsubsection{Erweiterung}\label{erweiterung-1}}
+\hypertarget{erweiterung-2}{%
+\subsubsection{Erweiterung}\label{erweiterung-2}}
 
 \begin{itemize}
 \tightlist
@@ -8823,8 +8892,8 @@ issues}\label{backward-compatibility-issues}}
   in configuration \#95
 \end{itemize}
 
-\hypertarget{fix-5}{%
-\subsubsection{Fix}\label{fix-5}}
+\hypertarget{fix-7}{%
+\subsubsection{Fix}\label{fix-7}}
 
 \begin{itemize}
 \tightlist
@@ -8894,8 +8963,8 @@ issues}\label{backward-compatibility-issues}}
 \hypertarget{v-1.4.2}{%
 \subsection{V 1.4.2}\label{v-1.4.2}}
 
-\hypertarget{fix-6}{%
-\subsubsection{Fix}\label{fix-6}}
+\hypertarget{fix-8}{%
+\subsubsection{Fix}\label{fix-8}}
 
 \begin{itemize}
 \tightlist
@@ -8912,8 +8981,8 @@ issues}\label{backward-compatibility-issues}}
 \hypertarget{v-1.4.2-1}{%
 \subsection{V 1.4.2}\label{v-1.4.2-1}}
 
-\hypertarget{fix-7}{%
-\subsubsection{Fix}\label{fix-7}}
+\hypertarget{fix-9}{%
+\subsubsection{Fix}\label{fix-9}}
 
 \begin{itemize}
 \tightlist
